--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'com.github.sarvarunajvm'
-version = 'v1.0.1'
+version = '1.0.1'
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
