--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,11 +36,4 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
       - name: Build
-        run: ./gradlew build -S
-
-      - name: Show Reports
-        uses: actions/upload-artifact@v1
-        if: failure()
-        with:
-          name: reports-${{ runner.os }}
-          path: build/
+        run: ./gradlew jar
